flux-deployments/apps/base/sample-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/managed-by: flux
    app.kubernetes.io/name: sample-app
